feat: implement basic follow events endpoint
