# libs/sdk-ts/model/response-event-with-user-reference.ts
@@ -1,0 +1,51 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * Follytics API
+ * Follytics API service
+ *
+ * The version of the OpenAPI document: 0.1.0
+ * Contact: support@follytics.localhost
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+
+// May contain unused imports in some cases
+// @ts-ignore
+import type { ResponseUserForEventReference } from './response-user-for-event-reference';
+
+/**
+ * 
+ * @export
+ * @interface ResponseEventWithUserReference
+ */
+export interface ResponseEventWithUserReference {
+    /**
+     * nolint: lll
+     * @type {string}
+     * @memberof ResponseEventWithUserReference
+     */
+    'createdAt': string;
+    /**
+     * 
+     * @type {string}
+     * @memberof ResponseEventWithUserReference
+     */
+    'id': string;
+    /**
+     * 
+     * @type {string}
+     * @memberof ResponseEventWithUserReference
+     */
+    'type': string;
+    /**
+     * 
+     * @type {ResponseUserForEventReference}
+     * @memberof ResponseEventWithUserReference
+     */
+    'user'?: ResponseUserForEventReference;
+}
+
