# libs/sdk-ts/model/response-user-for-event-reference.ts
@@ -1,0 +1,48 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * Follytics API
+ * Follytics API service
+ *
+ * The version of the OpenAPI document: 0.1.0
+ * Contact: support@follytics.localhost
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+
+
+/**
+ * 
+ * @export
+ * @interface ResponseUserForEventReference
+ */
+export interface ResponseUserForEventReference {
+    /**
+     * 
+     * @type {string}
+     * @memberof ResponseUserForEventReference
+     */
+    'avatar': string;
+    /**
+     * 
+     * @type {string}
+     * @memberof ResponseUserForEventReference
+     */
+    'id': string;
+    /**
+     * 
+     * @type {string}
+     * @memberof ResponseUserForEventReference
+     */
+    'name': string;
+    /**
+     * 
+     * @type {string}
+     * @memberof ResponseUserForEventReference
+     */
+    'username': string;
+}
+
